save, update issue solved on skill and stack controller