@@ -21,6 +21,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
+
 @Configuration
 public class SecurityConfig {
 	@Autowired
@@ -32,7 +34,7 @@ public class SecurityConfig {
 @Bean
 	public UrlBasedCorsConfigurationSource corsConfigurationSource(){
 	CorsConfiguration configuration = new CorsConfiguration();
-	configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+	configuration.setAllowedOrigins(List.of("http://127.0.0.1:5173"));
 	configuration.setAllowedMethods(Arrays.asList("GET","PUT","DELETE","POST","OPTIONS"));
 	configuration.setAllowedHeaders(Arrays.asList("Authorization","Content-Type","X-Requested-With","Accept"));
 
@@ -53,7 +55,6 @@ return  source;
 				.cors(Customizer.withDefaults())
 				.csrf(AbstractHttpConfigurer::disable)
 				.authorizeHttpRequests(auth -> {
-					auth.requestMatchers("/Images/**").permitAll();
 					auth.requestMatchers("/api/**").permitAll();
 					auth.requestMatchers(PathRequest.toStaticResources().atCommonLocations()).permitAll();
 					auth.anyRequest().authenticated();
